<resources>
    <string name="app_name">Task_1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  First fragment  -->
    <string name="fragment1TextViewFirstNameLabel">First name</string>
    <string name="fragment1TextViewLastNameLabel">Last name</string>
    <string name="fragment1TextViewFacultyNumberLabel">Faculty number</string>
    <string name="fragment1TextViewSpecialtyLabel">Speciality</string>
    <string name="fragment1ButtonSubmittLabel">Submit</string>
    <string-array name="fragment1SpinnerSpecialtyEntries">
        <item>Not selected</item>
        <item>BigData</item>
        <item>Internet Engineering</item>
        <item>Electronics</item>
    </string-array>
    <string name="xxx_label">XXXXXXX</string>
</resources>