<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/textViewFirstNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/fragment1TextViewFirstNameLabel" />


    <TextView
        android:id="@+id/textViewFirstNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/textViewLastNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/fragment1TextViewLastNameLabel" />


    <TextView
        android:id="@+id/textViewLastNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/textViewFacultyNumberDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/fragment1TextViewFacultyNumberLabel" />


    <TextView
        android:id="@+id/textViewFacultyNumberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/textViewSpecialtyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/fragment1TextViewSpecialtyLabel" />

    <TextView
        android:id="@+id/textViewSpecialtyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/previous" />
</LinearLayout>