<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

<!--    <TextView-->
<!--        android:id="@+id/textview_first"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/hello_first_fragment"-->
<!--        app:layout_constraintBottom_toTopOf="@id/button_first"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/button_first"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/next"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/textview_first" />-->

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment1TextViewFirstNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextFirstName"
        />


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewLastName"
        />


    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment1TextViewLastNameLabel"
        app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextLastName"
        />


    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewFacultyNumber"
        />


    <TextView
        android:id="@+id/textViewFacultyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment1TextViewFacultyNumberLabel"
        app:layout_constraintTop_toBottomOf="@id/editTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextFacultyNumber"
        />


    <EditText
        android:id="@+id/editTextFacultyNumber"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewFacultyNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewSpecialty"
        />


    <TextView
        android:id="@+id/textViewSpecialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment1TextViewSpecialtyLabel"
        app:layout_constraintTop_toBottomOf="@id/editTextFacultyNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextSpecialty"
        />


    <EditText
        android:id="@+id/editTextSpecialty"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewSpecialty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonSubmitt"
        />


    <Button
        android:id="@+id/buttonSubmitt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment1ButtonSubmittLabel"
        app:layout_constraintTop_toBottomOf="@id/editTextSpecialty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>